refactor GeoJsonConverter's