@@ -1,7 +1,6 @@
 package be.vlaanderen.informatievlaanderen.ldes.ldi;
 
 import be.vlaanderen.informatievlaanderen.ldes.ldi.valueobjects.GeoType;
-import org.apache.commons.lang3.tuple.Pair;
 import org.apache.jena.rdf.model.Model;
 import org.apache.jena.rdf.model.Property;
 import org.apache.jena.rdf.model.RDFNode;
@@ -10,7 +9,6 @@ import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.io.WKTWriter;
 
 import java.util.List;
-import java.util.Optional;
 
 import static org.apache.jena.rdf.model.ResourceFactory.createProperty;
 
@@ -27,7 +25,8 @@ public class WktConverter {
 	 */
 	public WktResult getWktFromModel(Model model) {
 		final Geometry geom = geometryExtractor.createGeometry(model, getGeometryId(model));
-		GeoType geoType = GeoType.fromName(geom.getGeometryType()).orElseThrow(); // TODO TVB: 15/09/23 throw custom issue
+		GeoType geoType = GeoType.fromName(geom.getGeometryType())
+				.orElseThrow(() -> new IllegalArgumentException("Geotype %s not supported".formatted(geom.getGeometryType())));
 		return new WktResult(geoType, writer.write(geom));
 	}
 
@@ -39,7 +38,7 @@ public class WktConverter {
 			throw new IllegalArgumentException("Ambiguous request: multiple geojson:geometry found.");
 		}
 
-		return geometryStatements.get(0);
+		return geometryStatements.getFirst();
 	}
 
 }
